# mandnfaf

./: CMakeLists.txt  Fern.h  Mandelbrot.h  main.cpp
Mandelbrot/: CMakeLists.txt  Julia.cpp  Julia.h  Mandelbrot.cpp  Mandelbrot.h  RandomString.h  main.cpp
